# ai_demo

./: config.py  main.py  prompts  pyproject.toml  requirements.txt  style.css  text  transfer_sonuclari.txt  utils.py
